--- a/src/news/templates/news/category.html
+++ b/src/news/templates/news/category.html
@@ -8,7 +8,7 @@
 {% for item in news %}
 <div class="card mb-3">
     <div class="card-header">
-        Категория: <a href="{{ item.category.get_absolute_url }}"> <b>{{ item.category.title}}</b></a>
+        Категория: <a href="{% url 'category' item.category.pk %}"> <b>{{ item.category.title}}</b></a>
     </div>
     <div class="card-body">
         <div class="media">
