--- a/src/news/templates/news/news_list.html
+++ b/src/news/templates/news/news_list.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-{% for item in news %}
+{% for item in object_list %}
 <div class="card mb-3">
     <div class="card-header">
         Категория: <a href="{{ item.category.get_absolute_url }}"> <b>{{ item.category.title}}</b></a>
