--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load cache %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -13,7 +14,9 @@
 <div class="container mt-3">
     <div class="row">
         <div class="col-md-3">
+            {% cache 30 sidebar %}
             {% block sidebar %}{% endblock %}
+            {% endcache %}
         </div>
         <div class="col-md-9">
             {% if messages %}
